...
        }
        telemetryManager.sendCalculatorSignal(tab: telemetryTab, action: TelemetryCalculatorAction.Copy)
    }

    func pasteSelected() {
        let alert = UIAlertController(
            title: "Paste from Clipboard",
            message: "Press confirm to paste the contents of your clipboard into HexaCalc.",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Confirm", style: .default, handler: { _ in self.pasteFromClipboard() }))
        alert.addAction(UIAlertAction(title: "Cancel", style: .destructive, handler: nil))
        present(alert, animated: true)
        telemetryManager.sendCalculatorSignal(tab: telemetryTab, action: TelemetryCalculatorAction.Paste)
    }

    func copyAndPasteSelected() {
...
